:bug: fixes navbar z-index issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,23 +1,22 @@
-html{
+html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
-section{
+section {
   height: 100vh;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
 }
-*{
- padding: 0;
- margin:0;
- box-sizing: border-box;
- font-family: serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: serif;
 }
-body{
+body {
   background-color: #0c0c1d;
   color: lightgrey;
 }
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
-
