--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,46 +1,47 @@
-.sidebar{
-    display: flex;
-    flex-direction:column ;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    color:black;
+.sidebar {
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  z-index: 100;
+  color: black;
+  height: 100vh;
+  width: 20rem;
 
-    .bg{
+  .bg {
     position: fixed;
     top: 0;
-    left:0;
+    left: 0;
     bottom: 0;
-    // z-index: 100;
     width: 400px;
     background: white;
-        .links{
-    position: absolute;
-    width: 100%;
-    height:100%;
-    // z-index: 100;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+    height: 100%;
 
-a{
-    font-size: 40px;
-}
+    .links {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
 
-        } 
+      a {
+        font-size: 40px;
+      }
     }
-        button{
+  }
+  button {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     position: fixed;
     top: 25px;
     left: 25px;
-    // z-index: 101;
     background-color: transparent;
     border: none;
-        }
-   
+  }
 }
